--- a/Webapp/Views/Home/Index.cshtml
+++ b/Webapp/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
 }
+
+<h1>Index</h1>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<footer>
+</footer>
