tre olike paneler (views)

--- a/Webapp/Views/Hem/Index.cshtml
+++ b/Webapp/Views/Hem/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿<!-- Time-stamp: <2021-08-22 16:47:45 stefan> -*-web-*- -->
+
+@{
     ViewData["Title"] = "Index";
 }
 
@@ -8,6 +10,3 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-
-<footer>
-</footer>
