--- a/Webapp/Pages/Shared/_Layout.cshtml
+++ b/Webapp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<!DOCTYPE html> <!-- Time-stamp: <2021-08-20 14:23:34 stefan> -*-web-*- -->
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,36 +9,36 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">testapp</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	    <div class="container">
+		<a class="navbar-brand" asp-area="" asp-page="/Index">testapp</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+			aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+		    <ul class="navbar-nav flex-grow-1">
+			<li class="nav-item">
+			    <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+			</li>
+			<li class="nav-item">
+			    <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+			</li>
+		    </ul>
+		</div>
+	    </div>
+	</nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+	<main role="main" class="pb-3">
+	    @RenderBody()
+	</main>
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - testapp - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+	<div class="container">
+	    &copy; 2021 - testapp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+	</div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
