--- a/Webapp/Views/_ViewImports.cshtml
+++ b/Webapp/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-<!-- Time-stamp: <2021-08-20 12:39:17 stefan> -->
+<!-- Time-stamp: <2021-08-23 13:48:18 stefan> -*-web-*- -->
+
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
