--- a/Webapp/Views/_ViewStart.cshtml
+++ b/Webapp/Views/_ViewStart.cshtml
@@ -1,1 +1,5 @@
-<!-- Time-stamp: <2021-08-20 12:39:17 stefan> -->
+<!-- Time-stamp: <2021-08-20 13:09:11 stefan> -*-web-*- -->
+
+@{
+    Layout="_Layout";
+}
