tre olike paneler (views)

--- a/Webapp/Views/Hem/Kontaktuppgifter.cshtml
+++ b/Webapp/Views/Hem/Kontaktuppgifter.cshtml
@@ -1,5 +1,5 @@
-﻿<!-- Time-stamp: <2021-08-23 14:50:03 stefan> -*-web-*- -->
-
+﻿<!-- Time-stamp: <2021-08-23 15:38:35 stefan> -*-web-*- -->
+<!-- Kontaktuppgifter.cshtml -->
 @{
     ViewData["Title"] = "Om mig";
 }
