--- a/Webapp/Views/Hem/OmMig.cshtml
+++ b/Webapp/Views/Hem/OmMig.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Time-stamp: <2021-08-23 14:52:00 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-23 15:38:45 stefan> -*-web-*- -->
+<!-- OmMig.cshtml -->
 
 @{
     ViewData["Title"] = "Om mig";
