--- a/Webapp/Views/Hem/githubRepos.cshtml
+++ b/Webapp/Views/Hem/githubRepos.cshtml
@@ -1,4 +1,6 @@
-﻿<!-- Time-stamp: <2021-08-23 14:26:52 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-23 15:39:00 stefan> -*-web-*- -->
+<!-- githubRepos.cshtml -->
+
 @model githubArkiv
 
 @{
@@ -9,6 +11,5 @@
 
 <div>
     De av mina projekt som finns på github.com/Skaraborgfakir
-    @foreach (string val in Result) {
-    }
+
 </div>
