--- a/Webapp/Views/_ViewImports.cshtml
+++ b/Webapp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-<!-- Time-stamp: <2021-08-23 13:48:18 stefan> -*-web-*- -->
+<!-- Time-stamp: <2021-08-23 15:36:57 stefan> -*-web-*- -->
+<!-- _ViewImports.cshtml -->
 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
