--- a/Webapp/Views/_ViewStart.cshtml
+++ b/Webapp/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
-<!-- Time-stamp: <2021-08-20 13:09:11 stefan> -*-web-*- -->
-
+<!-- Time-stamp: <2021-08-23 15:36:43 stefan> -*-web-*- -->
+<!-- _ViewStart.cshtml -->
 @{
     Layout="_Layout";
 }
