samtliga sidor fungerar sort of

--- a/Webapp/Views/Hem/Kontaktuppgifter.cshtml
+++ b/Webapp/Views/Hem/Kontaktuppgifter.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-23 15:38:35 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-23 17:22:18 stefan> -*-web-*- -->
 <!-- Kontaktuppgifter.cshtml -->
 @{
     ViewData["Title"] = "Om mig";
@@ -8,10 +8,9 @@
 
 <div class="text-center">
     <div>
-	Bor i Stenstorp
+	&#x260E; 0702-713 839
     </div>
     <div>
-	Har arbetat som signaltekniker på järnvägen. Har varit uthyrd
-	till InfraNord i Stockholm.
+	Stefan Niskanen Skoglund <a href="mailto:stefan.skoglund@agj.net">stefan.skoglund@agj.net</a>
     </div>
 </div>
