--- a/Webapp/Views/Hem/githubRepos.cshtml
+++ b/Webapp/Views/Hem/githubRepos.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-23 15:39:00 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-23 16:40:26 stefan> -*-web-*- -->
 <!-- githubRepos.cshtml -->
 
 @model githubArkiv
@@ -12,4 +12,7 @@
 <div>
     De av mina projekt som finns på github.com/Skaraborgfakir
 
+</div>
+<div>
+    repos : @ViewBag.repos
 </div>
