samtliga sidor fungerar sort of

--- a/Webapp/Pages/Shared/_Layout.cshtml
+++ b/Webapp/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html> <!-- Time-stamp: <2021-08-20 14:23:34 stefan> -*-web-*- -->
-<html lang="en">
+﻿<!DOCTYPE html> <!-- Time-stamp: <2021-08-24 09:54:00 stefan> -*-web-*- -->
+<html lang="sv">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
