--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-08-23 16:42:22 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-08-24 10:02:46 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
@@ -15,6 +15,29 @@
 	<link rel="stylesheet" href="/css/site.css" />
     </head>
     <body>
+	<header>
+	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+		<div class="container">
+		    <a class="navbar-brand" asp-area="" asp-page="/Index">Hem</a>
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+			    aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		    </button>
+		    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+			<ul class="navbar-nav flex-grow-1">
+			    <li class="nav-item">
+				<a class="nav-link text-dark" href="/Hem/OmMig">Lite grann om mig själv</a>
+			    </li>
+			    <li class="nav-item">
+				<a class="nav-link text-dark" href="/Hem/Kontaktuppgifter">Kontaktuppgifter</a>
+			    </li>
+			    <li class="nav-item">
+				<a class="nav-link text-dark" href="/Hem/GitRepos">Några projekt i github</a>
+			    </li>
+			</ul>
+		    </div>
+		</div>
+	</header>
 	<div>
 	    @RenderBody()
 	</div>
