--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,9 +1,14 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-08-24 10:02:46 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-08-26 14:03:57 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
 <!--    Views/_ViewStart.cshtml (ett fragment) innan
 <!--         Views/Hem/OmMig.cshtml (ett annat) -->
+
+<!-- https://dotnettutorials.net/lesson/asp-net-core-appsettings-json-file/ -->
+<!-- https://stackoverflow.com/questions/47296541/access-configuration-from-a-view-in-asp-net-core/47297327 -->
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 
 
 <html lang="sv">
@@ -16,9 +21,9 @@
     </head>
     <body>
 	<header>
-	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
 		<div class="container">
-		    <a class="navbar-brand" asp-area="" asp-page="/Index">Hem</a>
+		    <a class="navbar-brand" asp-controller="Hem" asp-action="Index">Hem</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 			    aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -26,13 +31,13 @@
 		    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Hem/OmMig">Lite grann om mig själv</a>
+				<a class="nav-link text-light" href="/Hem/OmMig">Lite grann om mig själv</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Hem/Kontaktuppgifter">Kontaktuppgifter</a>
+				<a class="nav-link text-light" href="/Hem/Kontaktuppgifter">Kontaktuppgifter</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Hem/GitRepos">Några projekt i github</a>
+				<a class="nav-link text-light" href="/Hem/GitRepos">Några projekt i github</a>
 			    </li>
 			</ul>
 		    </div>
@@ -45,6 +50,11 @@
 	<footer>
 	    <div>
 		&copy; Stefan Skoglund @DateTime.Now.ToString("D")
+	    </div>
+	    <div>
+		<!-- https://dotnettutorials.net/lesson/asp-net-core-appsettings-json-file/ -->
+		<!-- https://stackoverflow.com/questions/47296541/access-configuration-from-a-view-in-asp-net-core/47297327 -->
+		via appsettings*.json @Configuration["app_run_miljö"]
 	    </div>
 	</footer>
     </body>
