gjorde om url till en länk

--- a/Webapp/Views/Hem/githubRepos.cshtml
+++ b/Webapp/Views/Hem/githubRepos.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-30 01:49:54 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-30 08:54:08 stefan> -*-web-*- -->
 <!-- githubRepos.cshtml -->
 
 @using Webapp.Modeller;
@@ -25,7 +25,7 @@
 	    <tr>
 	    <td>@item.Name</td>
 	    <td>@item.Full_Name</td>
-	    <td>@item.Html_Url</td>
+	    <td><a href="@item.Html_Url">@item.Html_Url</a></td>
 	    <td>@item.Description</td>
 	    </tr>
 	}
