lade till ViewData i Ommmig

--- a/Webapp/Views/Hem/OmMig.cshtml
+++ b/Webapp/Views/Hem/OmMig.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-23 15:38:45 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-30 12:16:51 stefan> -*-web-*- -->
 <!-- OmMig.cshtml -->
 
 @{
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <div>
-	Bor i Stenstorp
+	Bor i @ViewData["hemort"]
     </div>
     <div>
 	Har arbetat som signaltekniker på järnvägen. Har varit uthyrd
