inhämtning från uppgift 1

--- a/Webapp/Views/Doctor/FeverCheck.cshtml
+++ b/Webapp/Views/Doctor/FeverCheck.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-24 11:17:48 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-30 12:02:41 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
 
 @{
@@ -12,5 +12,7 @@
 </div>
 
 <form>
-    <input id="kroppstemp">
+    <label for="kroppstemp">Vad är din temperatur</label>
+    <input id="kroppstemp"> <br>
+    <input type="submit" value="Inmatning">
 </form>
