--- a/Webapp/Views/Hem/GitRepos.cshtml
+++ b/Webapp/Views/Hem/GitRepos.cshtml
@@ -1,8 +1,8 @@
-﻿<!-- Time-stamp: <2021-08-30 22:45:51 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-30 22:57:49 stefan> -*-web-*- -->
 <!-- githubRepos.cshtml -->
 
 @using Webapp.Modeller;
-@model Webapp.Modeller.githubArkiv
+@model Webapp.Modeller.githubArkiv;
 
 @{
     ViewData["Title"] = "Olika projekt i github";
@@ -21,7 +21,7 @@
 	    <th>URL</th>
 	    <th>Beskrivning</th>
 	</tr>
-	@foreach (Repo item in ViewBag.repos) {
+	@foreach (Repo item in Model.samtligaArkiv) {
 	    <tr>
 	    <td>@item.Name</td>
 	    <td>@item.Full_Name</td>
