--- a/Webapp/Views/Home/About.cshtml
+++ b/Webapp/Views/Home/About.cshtml
@@ -1,13 +1,13 @@
-﻿<!-- Time-stamp: <2021-08-23 15:38:45 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-30 21:53:15 stefan> -*-web-*- -->
 <!-- OmMig.cshtml -->
 
 @{
-    ViewData["Title"] = "Om mig";
+    ViewData["Title"] = "About me";
 }
 
 <div class="text-center">
     <div>
-	Bor i Stenstorp
+	Bor i @ViewData["hemort"]
     </div>
     <div>
 	Har arbetat som signaltekniker på järnvägen. Har varit uthyrd
