--- a/Webapp/Views/Doctor/FeverCheck.cshtml
+++ b/Webapp/Views/Doctor/FeverCheck.cshtml
@@ -1,5 +1,7 @@
-﻿<!-- Time-stamp: <2021-08-30 12:02:41 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-31 00:37:17 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
+
+@using Webapp.Viewmodel
 
 @{
     ViewData["Title"] = "Doctor Boströms mottagning";
@@ -11,8 +13,8 @@
     </div>
 </div>
 
-<form>
-    <label for="kroppstemp">Vad är din temperatur</label>
-    <input id="kroppstemp"> <br>
-    <input type="submit" value="Inmatning">
+@model Feberkontroll
+<form asp-controller="Doctor" asp-action="inmatning" method="post">
+    <label for="kroppstemp">Vad är din temperatur</label><input asp-for="Kroppstemp"/><br/>
+    <button type="submit">Inmatning</button>
 </form>
