--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-08-30 12:37:17 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-08-30 21:57:34 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
@@ -23,7 +23,7 @@
 	<header>
 	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 		<div class="container">
-		    <a class="navbar-brand" asp-area="" asp-page="/Index">Hem</a>
+		    <a class="navbar-brand" asp-area="" asp-page="/Home/Index">Hem</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 			    aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -31,7 +31,10 @@
 		    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Hem/OmMig">Lite grann om mig själv</a>
+				<a class="nav-link text-dark" href="/Home/About">Lite grann om mig själv</a>
+			    </li>
+			    <li class="nav-item">
+				<a class="nav-link text-dark" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
 			    </li>
 			</ul>
 		    </div>
