--- a/Webapp/Views/Doctor/FeverCheck.cshtml
+++ b/Webapp/Views/Doctor/FeverCheck.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Time-stamp: <2021-08-31 00:37:17 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-31 09:29:57 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
 
 @using Webapp.Viewmodel
@@ -9,7 +9,7 @@
 
 <div class="text-center">
     <div>
-	Doctor Boström här, vad är ditt bekymmer ?
+	Doktor Boström här, vad är ditt bekymmer ?
     </div>
 </div>
 
