--- a/Webapp/Views/Doctor/FeverCheckStatus.cshtml
+++ b/Webapp/Views/Doctor/FeverCheckStatus.cshtml
@@ -1,14 +1,14 @@
-﻿<!-- Time-stamp: <2021-08-31 00:43:29 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-08-31 09:29:55 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
 
 @using Webapp.Viewmodel
 
 @{
-    ViewData["Title"] = "Doctor Boströms mottagning";
+    ViewData["Title"] = "Doktor Boströms mottagning";
 }
 
 <div class="text-center">
     <div>
-	Doctor Boström: @ViewData["status"]
+	Doktor Boström: @ViewData["status"]
     </div>
 </div>
