--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
 			    <li class="nav-item">
 				<a class="nav-link text-dark" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
 			    </li>
+			    <li class="nav-item">
+				<a class="nav-link text-dark" href="/Home/Game">Gissa ett tal</a>
+			    </li>
 			</ul>
 		    </div>
 		</div>
