det inte tillräckligt mycket dry på långa vägar
använder repo mönstret bland annat

skyfflar en datastruktur till vyn etcc....

--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,15 +1,16 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-08-31 12:48:02 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-09-01 13:31:22 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
 <!--    Views/_ViewStart.cshtml (ett fragment) innan
-<!--         Views/Hem/OmMig.cshtml (ett annat) -->
+     <!--         Views/Hem/OmMig.cshtml (ett annat) -->
 
 <!-- https://dotnettutorials.net/lesson/asp-net-core-appsettings-json-file/ -->
 <!-- https://stackoverflow.com/questions/47296541/access-configuration-from-a-view-in-asp-net-core/47297327 -->
+
+<!-- // via appsettings*.json i foot -->
 @using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
-
 
 <html lang="sv">
     <head>
@@ -37,7 +38,7 @@
 				<a class="nav-link text-dark" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Home/Game">Gissa ett tal</a>
+				<a class="nav-link text-dark" href="/GuessingGame">Gissa ett tal</a>
 			    </li>
 			</ul>
 		    </div>
