--- a/Webapp/Views/GissaEttTalSpel/Spela.cshtml
+++ b/Webapp/Views/GissaEttTalSpel/Spela.cshtml
@@ -1,9 +1,9 @@
-﻿<!-- Time-stamp: <2021-08-31 13:00:57 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-09-01 17:36:25 stefan> -*-web-*- -->
 <!-- githubRepos.cshtml -->
 
-@using Webapp.Viewmodel
+@using Webapp.Vydata
 
-@model Game
+@model GissaEttTalSpelVyModell
 
 @{
     ViewData["Title"] = "Gissa ett tal";
@@ -15,7 +15,11 @@
     Gissa ett tal mellan 1-100
 </div>
 
-<form asp-controller="Home" asp-action="Game" method="post">
+<div>
+    Fram tills nu har du gissat @Model.AntalNuvarandeGissningar gånger
+</div>
+
+<form asp-controller="GissaEttTalSpel" asp-action="Spela" method="post">
     <label for="gissning">Gissa på ett tal:</label><input asp-for="Talgissning"/><br/>
     <button type="submit">Inmatning</button>
 </form>
