--- a/Webapp/wwwroot/css/site.css
+++ b/Webapp/wwwroot/css/site.css
@@ -62,10 +62,18 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  /* white-space: nowrap; */
+  /* line-height: 60px; */ /* Vertically center the text there */
+
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:60px; width:100%;
+    background:#bbbbbb;
+    white-space: nowrap;
 }
