--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-08-26 14:03:57 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-09-02 17:32:31 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
@@ -9,7 +9,6 @@
 <!-- https://stackoverflow.com/questions/47296541/access-configuration-from-a-view-in-asp-net-core/47297327 -->
 @using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
-
 
 <html lang="sv">
     <head>
@@ -47,7 +46,7 @@
 	    @RenderBody()
 	</div>
 	<hr/>
-	<footer>
+	<footer class="footer">
 	    <div>
 		&copy; Stefan Skoglund @DateTime.Now.ToString("D")
 	    </div>
