--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-09-02 17:28:40 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-09-03 09:27:12 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
 <!--     fragment ? Exv: -->
@@ -20,7 +20,7 @@
     </head>
     <body>
 	<header>
-	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
 		<div class="container">
 		    <a class="navbar-brand" asp-area="" asp-page="/Home/Index">Hem</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -30,10 +30,10 @@
 		    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Home/About">Lite grann om mig själv</a>
+				<a class="nav-link text-light" href="/Home/About">Lite grann om mig själv</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
+				<a class="nav-link text-light" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
 			    </li>
 			</ul>
 		    </div>
