--- a/Webapp/wwwroot/css/site.css
+++ b/Webapp/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
+﻿/* Time-stamp: <2021-09-03 09:31:08 stefan> */
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
@@ -64,14 +65,9 @@ body {
 }
 
 .footer {
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* width: 100%; */
-    /* white-space: nowrap; */
-    /* line-height: 60px; */ /* Vertically center the text there */
     position: fixed;
     left: 0px;
     bottom: 0px;
-    height: 40px; width: 100%;
+    width: 100%;
     background:#bbbbbb;
 }
