--- a/Webapp/wwwroot/css/site.css
+++ b/Webapp/wwwroot/css/site.css
@@ -65,9 +65,9 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    background:#bbbbbb;
 }
