--- a/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-<!DOCTYPE html> <!-- Time-stamp: <2021-09-01 13:31:22 stefan> -*-web-*- -->
+<!DOCTYPE html> <!-- Time-stamp: <2021-09-03 10:10:10 stefan> -*-web-*- -->
 <!-- _Layout.cshtml -->
 <!-- inkluderar via RenderBody() de olika fragmenten -->
-<!--     fragment ? Exv: -->
-<!--    Views/_ViewStart.cshtml (ett fragment) innan
-     <!--         Views/Hem/OmMig.cshtml (ett annat) -->
-
+<!--   fragment ? Exv: -->
+<!--   Views/_ViewStart.cshtml (ett fragment) innan -->
+<!--   Views/Hem/OmMig.cshtml (ett annat) -->
+<!--   Views/Doctor/FeverCheck.cshtml -->
+<!--   Views/Doctor/FeverCheckStatus.cshtml -->
 <!-- https://dotnettutorials.net/lesson/asp-net-core-appsettings-json-file/ -->
 <!-- https://stackoverflow.com/questions/47296541/access-configuration-from-a-view-in-asp-net-core/47297327 -->
 
@@ -22,7 +23,7 @@
     </head>
     <body>
 	<header>
-	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
 		<div class="container">
 		    <a class="navbar-brand" asp-area="" asp-page="/Home/Index">Hem</a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -32,13 +33,13 @@
 		    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Home/About">Lite grann om mig själv</a>
+				<a class="nav-link text-light" href="/Home/About">Lite grann om mig själv</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
+				<a class="nav-link text-light" href="/Doctor/FeverCheck">Dr Boströms mottagning</a>
 			    </li>
 			    <li class="nav-item">
-				<a class="nav-link text-dark" href="/GuessingGame">Gissa ett tal</a>
+				<a class="nav-link text-light" href="/GuessingGame">Gissa ett tal</a>
 			    </li>
 			</ul>
 		    </div>
@@ -48,7 +49,7 @@
 	    @RenderBody()
 	</div>
 	<hr/>
-	<footer>
+	<footer class="footer">
 	    <div>
 		&copy; Stefan Skoglund @DateTime.Now.ToString("D")
 	    </div>
