--- a/Webapp/Views/Doctor/FeverCheck.cshtml
+++ b/Webapp/Views/Doctor/FeverCheck.cshtml
@@ -1,7 +1,7 @@
-﻿<!-- Time-stamp: <2021-08-31 13:01:12 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-09-03 12:08:11 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
 
-@using Webapp.Viewmodel
+@using Webapp.Vydata
 
 @{
     ViewData["Title"] = "Doctor Boströms mottagning";
