--- a/Webapp/Views/Doctor/FeverCheckStatus.cshtml
+++ b/Webapp/Views/Doctor/FeverCheckStatus.cshtml
@@ -1,7 +1,7 @@
-﻿<!-- Time-stamp: <2021-08-31 09:29:55 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-09-03 12:08:17 stefan> -*-web-*- -->
 <!-- FeverCheck.cshtml -->
 
-@using Webapp.Viewmodel
+@using Webapp.Vydata
 
 @{
     ViewData["Title"] = "Doktor Boströms mottagning";
