--- a/Webapp/Views/Home/githubRepos.cshtml
+++ b/Webapp/Views/Home/githubRepos.cshtml
@@ -1,7 +1,7 @@
-﻿<!-- Time-stamp: <2021-08-30 00:36:25 stefan> -*-web-*- -->
+﻿<!-- Time-stamp: <2021-09-03 12:09:20 stefan> -*-web-*- -->
 <!-- githubRepos.cshtml -->
 
-@model githubArkiv
+@model Webapp.Modeller.githubArkiv
 
 @{
     ViewData["Title"] = "Olika projekt i github";
